# mel_tasks

hw01/: library.h  test.cpp
hw02/: CMakeLists.txt  combinatorics.cpp
hw03/: contact_list.cpp
hw04/: vm.cpp  vm.h
hw05/: run.cpp  token.h  validator.cpp  validator.h
hw06/: vector.cpp  vector.h
hw07/: audio.cpp  audio.h  document.cpp  document.h  file.cpp  file.h  filecontent.cpp  filecontent.h  filesystem.cpp  filesystem.h  image.cpp  image.h  run.cpp  video.cpp  video.h
hw08/: client.cpp  client.h  connection.cpp  connection.h  filedescriptor.cpp  filedescriptor.h  run.cpp  server.cpp  server.h  socket.cpp
tests/hw01/: test01.cpp
tests/hw02/: CMakeLists.txt
